@@ -177,6 +177,10 @@ modules/access/attachment.c
 modules/access/avio.h
 modules/access/bluray.c
 modules/access/cdda.c
+modules/access/cloudstorage.cpp
+modules/access/cloudstorage/access.cpp
+modules/access/cloudstorage/access.h
+modules/access/cloudstorage/provider_callback.h
 modules/access/concat.c
 modules/access/dc1394.c
 modules/access/dcp/dcp.cpp
